--- a/QuanLyTour/Views/Admin/QuanLyPhieuView.cshtml
+++ b/QuanLyTour/Views/Admin/QuanLyPhieuView.cshtml
@@ -26,6 +26,10 @@
         .search-container button {
             padding: 6px 10px;
         }
+
+        .table th, td{
+            text-align: center;
+        }
 </style>
 <section id="main-content">
     <section class="wrapper">
