--- a/QuanLyTour/Views/VeMayBay/Index.cshtml
+++ b/QuanLyTour/Views/VeMayBay/Index.cshtml
@@ -141,45 +141,45 @@
                 </div>
                 <div class="flight-price">
                     <div class="price">1.376.000 <span class="currency">VND</span></div>
-                    <a href="@Url.Action("ChiTietVeMayBay", "VeMayBay", new { chuyenTauID = 1 })" class="view-button">Xem</a>
+                    <a href="@Url.Action("ChiTietVeMayBay", "VeMayBay", new { IdChuyenBay = 1 })" class="view-button">Xem</a>
                 </div>
             </div>
 
-            <!-- Flight 2 -->
-            <div class="flight-card">
-                <div class="flight-route">
-                    <div class="cities">
-                        Hồ Chí Minh <span class="arrow">⇄</span> Đà Nẵng
-                    </div>
-                    <img class="airline-logo" src="/hinhanh/VietravelAirlines.png" alt="Vietravel Airlines">
-                </div>
-                <div class="flight-dates">
-                    <div class="date">16 thg 09</div>
-                    <div class="date">19 thg 09</div>
-                </div>
-                <div class="flight-price">
-                    <div class="price">1.396.000 <span class="currency">VND</span></div>
-                    <a href="@Url.Action("ChiTietVeMayBay", "VeMayBay", new { chuyenTauID = 1 })" class="view-button">Xem</a>
-                </div>
-            </div>
+            @* <!-- Flight 2 --> *@
+            @* <div class="flight-card"> *@
+            @*     <div class="flight-route"> *@
+            @*         <div class="cities"> *@
+            @*             Hồ Chí Minh <span class="arrow">⇄</span> Đà Nẵng *@
+            @*         </div> *@
+            @*         <img class="airline-logo" src="/hinhanh/VietravelAirlines.png" alt="Vietravel Airlines"> *@
+            @*     </div> *@
+            @*     <div class="flight-dates"> *@
+            @*         <div class="date">16 thg 09</div> *@
+            @*         <div class="date">19 thg 09</div> *@
+            @*     </div> *@
+            @*     <div class="flight-price"> *@
+            @*         <div class="price">1.396.000 <span class="currency">VND</span></div> *@
+            @*         <a href="@Url.Action("ChiTietVeMayBay", "VeMayBay", new { chuyenTauID = 1 })" class="view-button">Xem</a> *@
+            @*     </div> *@
+            @* </div> *@
 
-            <!-- Flight 3 -->
-            <div class="flight-card">
-                <div class="flight-route">
-                    <div class="cities">
-                        Hà Nội <span class="arrow">⇄</span> Đà Nẵng
-                    </div>
-                    <img class="airline-logo" src="~/hinhanh/VietravelAirlines.png" alt="Vietravel Airlines">
-                </div>
-                <div class="flight-dates">
-                    <div class="date">09 thg 09</div>
-                    <div class="date">18 thg 09</div>
-                </div>
-                <div class="flight-price">
-                    <div class="price">1.504.000 <span class="currency">VND</span></div>
-                    <a href="@Url.Action("ChiTietVeMayBay", "VeMayBay", new { chuyenTauID = 1 })" class="view-button">Xem</a>
-                </div>
-            </div>
+            @* <!-- Flight 3 --> *@
+            @* <div class="flight-card"> *@
+            @*     <div class="flight-route"> *@
+            @*         <div class="cities"> *@
+            @*             Hà Nội <span class="arrow">⇄</span> Đà Nẵng *@
+            @*         </div> *@
+            @*         <img class="airline-logo" src="~/hinhanh/VietravelAirlines.png" alt="Vietravel Airlines"> *@
+            @*     </div> *@
+            @*     <div class="flight-dates"> *@
+            @*         <div class="date">09 thg 09</div> *@
+            @*         <div class="date">18 thg 09</div> *@
+            @*     </div> *@
+            @*     <div class="flight-price"> *@
+            @*         <div class="price">1.504.000 <span class="currency">VND</span></div> *@
+            @*         <a href="@Url.Action("ChiTietVeMayBay", "VeMayBay", new { chuyenTauID = 1 })" class="view-button">Xem</a> *@
+            @*     </div> *@
+            @* </div> *@
 
         </div>
     </div>
