--- a/QuanLyTour/Views/Admin/HoTroView.cshtml
+++ b/QuanLyTour/Views/Admin/HoTroView.cshtml
@@ -13,6 +13,9 @@
         text-overflow: ellipsis;
         max-width: 80px;
     }
+    .table th, td{
+        text-align: center;
+    }
 </style>
 
 <section id="main-content">
@@ -26,7 +29,7 @@
                     <thead>
                         <tr>
                             <th style="width: 10%;">Mã Hỗ Trợ</th>
-                            <th style="width: 30%;">Tên Người Dùng</th>
+                            <th style="width: 12%;">Mã Người Dùng</th>
                             <th>Nội Dung</th>
                             <th style="width: 20%;">Ngày Gửi</th>
                         </tr>
