--- a/QuanLyTour/Views/Admin/QuanLyHoaDonView.cshtml
+++ b/QuanLyTour/Views/Admin/QuanLyHoaDonView.cshtml
@@ -21,6 +21,10 @@
         .search-container button {
             padding: 6px 10px;
         }
+
+        .table th, td{
+            text-align: center;
+        }
 </style>
 <section id="main-content">
     <section class="wrapper">
