--- a/QuanLyTour/Views/Admin/QuanLyNguoiDung.cshtml
+++ b/QuanLyTour/Views/Admin/QuanLyNguoiDung.cshtml
@@ -20,6 +20,10 @@
         .search-container button {
             padding: 6px 10px;
         }
+
+        .thead-light th, td{
+            text-align: center;
+        }
 </style>
 <section id="main-content">
     <section class="wrapper">
